arreglo los permisos, los roles y otras cosas

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1926,7 +1926,7 @@ h3 {
 }
 
 
-/*switch de inhabilitar/habilitar en las tablas*/
+/*switch de deshabilitar/habilitar en las tablas*/
 .switch {
   position: relative;
   display: inline-block;
